@@ -4791,4 +4791,5 @@
 20150506 peripherals/disk/wd_fdc.h: tidy up comments (Stuart).
 20150506 peripherals/disk/{fdd.[ch],wd_fdc.[ch]}: implement WD2797 emulation
          (rest of patch #330) (Gergely Szasz).
-
+20150506 peripherals/disk/wd_fdc.h: use enums for status register bits and
+         configuration flags (Stuart).
